added reference to GECCO paper on mixint suites to LaTeX template

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -1,6 +1,16 @@
 % This file was created with JabRef 2.7.2.
 % Encoding: MacRoman
 
+@INPROCEEDINGS{tusar2019mixint,
+  author = {T. Tu{\v{s}}ar and D. Brockhoff and N. Hansen},
+  title = {Mixed-Integer Benchmark Problems for Single-and Bi-Objective Optimization},
+	pages = {718--726}, 
+	booktitle = {Genetic and Evolutionary Computation Conference (GECCO 2019)},
+  year = {2019},
+  publisher = {ACM},
+	doi = {10.1145/3321707.3321868}
+}
+
 @unpublished{elhara:hal-02068407,
   TITLE = {{COCO: The Large Scale Black-Box Optimization Benchmarking (bbob-largescale) Test Suite}},
   AUTHOR = {Elhara, Ouassim Ait and Varelas, Konstantinos and Nguyen, Duc Hung and Tusar, Tea and Brockhoff, Dimo and Hansen, Nikolaus and Auger, Anne},
