Update AUTHORS - I hope I did not forget anybody

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,6 +13,7 @@ Contributors to NumBBO/CoCO have been
 - Verena Heidrich-Meisner
 - Filip Matzner
 - Olaf Mersmann (3)
+- Duc Manh Nguyen 
 - Petr Posik
 - Mike Preuss
 - Raymond Ros (3)
@@ -22,6 +23,7 @@ Contributors to NumBBO/CoCO have been
 - Heike Trautmann
 - Dejan Tusar (3)
 - Tea Tusar (3)
+- Konstantinos Varelas (2)
 
 (2): main contributor
 (3): power contributor
