reverted aRT to ERT also in LaTeX templates (related to #1990)

--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -48,7 +48,7 @@
 \graphicspath{{\bbobdatapath\algfolder}}
 
 \newcommand{\DIM}{\ensuremath{\mathrm{DIM}}}
-\newcommand{\aRT}{\ensuremath{\mathrm{aRT}}}
+\newcommand{\ERT}{\ensuremath{\mathrm{ERT}}}
 \newcommand{\FEvals}{\ensuremath{\mathrm{FEvals}}}
 \newcommand{\nruns}{\ensuremath{\mathrm{Nruns}}}
 \newcommand{\Dfb}{\ensuremath{\Delta f_{\mathrm{best}}}}
@@ -190,14 +190,14 @@ In order to evaluate the CPU timing of the algorithm, we have run the \change{MY
 
 Results of \algname\ from experiments according to \cite{hansen2016exp} and \cite{hansen2016perfass} on the benchmark
 functions given in \cite{wp200901_2010,hansen2012fun} are presented in
-Figures~\ref{fig:aRTgraphs}, \ref{fig:RLDs}, \ref{tab:aRTloss}, and \ref{fig:aRTlogloss} and in
-Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016cocoplat}, version \change{2.0}, the plots were produced with version \change{2.0}.
+Figures~\ref{fig:ERTgraphs}, \ref{fig:RLDs}, \ref{tab:ERTloss}, and \ref{fig:ERTlogloss} and in
+Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2016cocoplat}, version \change{2.0}, the plots were produced with version \change{2.0}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% Scaling of aRT with dimension
+% Scaling of ERT with dimension
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
@@ -228,7 +228,7 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 \includegraphics[width=0.24\textwidth]{ppfigdim_f024}
 \end{tabular}
 \vspace{-3ex}
- \caption{\label{fig:aRTgraphs}
+ \caption{\label{fig:ERTgraphs}
  \bbobppfigdimlegend{$f_1$ and $f_{24}$}
  }
 \end{figure*}
@@ -236,8 +236,8 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
  
-% Table showing the average runtime (aRT in number of function
-% evaluations) divided by the best aRT measured during BBOB-2009 (given in the
+% Table showing the expected runtime (ERT in number of function
+% evaluations) divided by the best ERT measured during BBOB-2009 (given in the
 % first row of each cell) for functions $f_1$--$f_{24} for dimension 5$.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -312,7 +312,7 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 
 \end{minipage}}
 
-\caption[Table of aRTs]{\label{tab:aRTs5}\bbobpptablecaption{dimension $5$}
+\caption[Table of ERTs]{\label{tab:ERTs5}\bbobpptablecaption{dimension $5$}
 }
 \end{table*}
 
@@ -320,8 +320,8 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% Table showing the average runtime (aRT in number of function
-% evaluations) divided by the best aRT measured during BBOB-2009 (given in the
+% Table showing the expected runtime (ERT in number of function
+% evaluations) divided by the best ERT measured during BBOB-2009 (given in the
 % first row of each cell) for functions $f_1$--$f_{24} for dimension 20$.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -391,7 +391,7 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 
 \end{minipage}}
  
-\caption[Table of aRTs]{\label{tab:aRTs20}\bbobpptablecaption{dimension $20$}
+\caption[Table of ERTs]{\label{tab:ERTs20}\bbobpptablecaption{dimension $20$}
 }
 \end{table*}
 
@@ -453,7 +453,7 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% aRT loss ratios (figure and table)
+% ERT loss ratios (figure and table)
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
@@ -465,7 +465,7 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 %
 \input{\bbobdatapath\algfolder pploglosstable_05D_noiselessall}\\
 \input{\bbobdatapath\algfolder pploglosstable_20D_noiselessall}
-\caption{\label{tab:aRTloss}%
+\caption{\label{tab:ERTloss}%
 \bbobloglosstablecaption{}
 }
 \end{figure}
@@ -474,7 +474,7 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% aRT loss ratios per function group
+% ERT loss ratios per function group
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
@@ -504,7 +504,7 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 \includegraphics[width=0.24\textwidth]{pplogloss_20D_mult2}
 \vspace*{-0.5ex}
 \end{tabular}
- \caption{\label{fig:aRTlogloss}%
+ \caption{\label{fig:ERTlogloss}%
 \bbobloglossfigurecaption{}
 }
 \end{figure}
