LaTeX templates: * update of conference entry for GECCO'2021 * update of BibTeX entry of COCO paper

--- a/code-postprocessing/latex-templates/bbob.bib
+++ b/code-postprocessing/latex-templates/bbob.bib
@@ -58,7 +58,10 @@
              in a Black-Box Setting},
   journal = {Optimization Methods and Software},
   doi = {https://doi.org/10.1080/10556788.2020.1808977},
-  year = 2020
+	pages = {114--144},
+	issue = {1},
+	volume = {36},
+  year = 2021
 }
 
 @article{hansen2016exp,
