--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -24,9 +24,9 @@
 \acmISBN{123-4567-24-567/18/07}
 
 %Conference
-\acmConference[GECCO '19]{the Genetic and Evolutionary Computation Conference 2019}{July 13--17, 2019}{Prague, Czech Republic}
-\acmYear{2019}
-\copyrightyear{2019}
+\acmConference[GECCO '21]{the Genetic and Evolutionary Computation Conference 2021}{July 10--14, 2021}{Lille, France}
+\acmYear{2021}
+\copyrightyear{2021}
 
 \acmPrice{15.00}
 
@@ -64,7 +64,7 @@
 
 \title{Black-Box Optimization Benchmarking Template for Noiseless Function
 Testbed}
-\titlenote{Submission deadline: April 3rd.}
+\titlenote{Submission deadline: April 12th.}
 %Camera-ready paper due April 24th.}}
 \subtitle{Draft version}
 
@@ -189,7 +189,7 @@ In order to evaluate the CPU timing of the algorithm, we have run the \change{MY
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 Results of \algname\ from experiments according to \cite{hansen2016exp} and \cite{hansen2016perfass} on the benchmark
-functions given in \cite{wp200901_2010,hansen2012fun} are presented in
+functions given in \cite{wp200901_2010} are presented in
 Figures~\ref{fig:ERTgraphs}, \ref{fig:RLDs}, \ref{tab:ERTloss}, and \ref{fig:ERTlogloss} and in
 Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2020cocoplat}, version \change{2.4}, the plots were produced with version \change{2.4}.
 
