--- a/code-postprocessing/latex-templates/templateBBOBcmp.tex
+++ b/code-postprocessing/latex-templates/templateBBOBcmp.tex
@@ -46,9 +46,9 @@
 \acmISBN{123-4567-24-567/18/07}
 
 %Conference
-\acmConference[GECCO '19]{the Genetic and Evolutionary Computation Conference 2019}{July 13--17, 2019}{Prague, Czech Republic}
-\acmYear{2019}
-\copyrightyear{2019}
+\acmConference[GECCO '21]{the Genetic and Evolutionary Computation Conference 2021}{July 10--14, 2021}{Lille, France}
+\acmYear{2021}
+\copyrightyear{2021}
 
 \acmPrice{15.00}
 
