--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -1,38 +1,8 @@
 \documentclass[sigconf]{acmart}
 
-\usepackage{booktabs} % For formal tables
-\usepackage{graphicx}
-\usepackage{rotating}
-\definecolor{Gray}{gray}{0.6}
+% include preamble:
+\input{templatepreamble.tex}
 
-
-% Copyright
-%\setcopyright{none}
-%\setcopyright{acmcopyright}
-%\setcopyright{acmlicensed}
-\setcopyright{rightsretained}
-%\setcopyright{usgov}
-%\setcopyright{usgovmixed}
-%\setcopyright{cagov}
-%\setcopyright{cagovmixed}
-
-
-% DOI
-\acmDOI{10.1145/123_4}
-
-% ISBN
-\acmISBN{123-4567-24-567/18/07}
-
-%Conference
-\acmConference[GECCO '21]{the Genetic and Evolutionary Computation Conference 2021}{July 10--14, 2021}{Lille, France}
-\acmYear{2021}
-\copyrightyear{2021}
-
-\acmPrice{15.00}
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%   END OF PREAMBLE   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%% TO BE EDITED %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -47,25 +17,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \graphicspath{{\bbobdatapath\algfolder}}
 
-\newcommand{\DIM}{\ensuremath{\mathrm{DIM}}}
-\newcommand{\ERT}{\ensuremath{\mathrm{ERT}}}
-\newcommand{\FEvals}{\ensuremath{\mathrm{FEvals}}}
-\newcommand{\nruns}{\ensuremath{\mathrm{Nruns}}}
-\newcommand{\Dfb}{\ensuremath{\Delta f_{\mathrm{best}}}}
-\newcommand{\Df}{\ensuremath{\Delta f}}
-\newcommand{\nbFEs}{\ensuremath{\mathrm{\#FEs}}}
-\newcommand{\fopt}{\ensuremath{f_\mathrm{opt}}}
-\newcommand{\ftarget}{\ensuremath{f_\mathrm{t}}}
-\newcommand{\CrE}{\ensuremath{\mathrm{CrE}}}
-\newcommand{\change}[1]{{\color{red} #1}}
-
 \begin{document}
 
 
 \title{Black-Box Optimization Benchmarking Template for Noiseless Function
 Testbed}
-\titlenote{Submission deadline: April 12th.}
-%Camera-ready paper due April 24th.}}
+\renewcommand{\shorttitle}{Black-Box Optimization Benchmarking Template for Noiseless Function Testbed}
 \subtitle{Draft version}
 
 
@@ -191,7 +148,8 @@ In order to evaluate the CPU timing of the algorithm, we have run the \change{MY
 Results of \algname\ from experiments according to \cite{hansen2016exp} and \cite{hansen2016perfass} on the benchmark
 functions given in \cite{wp200901_2010} are presented in
 Figures~\ref{fig:ERTgraphs}, \ref{fig:RLDs}, \ref{tab:ERTloss}, and \ref{fig:ERTlogloss} and in
-Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2020cocoplat}, version \change{2.4}, the plots were produced with version \change{2.4}.
+Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2020cocoplat}, version \change{\version},
+the plots were produced with version \change{\version}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -404,10 +362,6 @@ Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2020
 % Empirical cumulative distribution functions (ECDFs) per function group.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\rot}[2][2.5]{
-  \hspace*{-3.5\baselineskip}%
-  \begin{rotate}{90}\hspace*{#1em}#2\vspace{0.5em}
-  \end{rotate}}
 \begin{figure*}
 \begin{tabular}{l@{\hspace*{-0.00\textwidth}}l@{\hspace*{0.01\textwidth}}|l@{\hspace*{-0.00\textwidth}}l}
 \multicolumn{2}{c}{$D=5$} & \multicolumn{2}{c}{$D=20$}\\[-0.5ex]
@@ -480,25 +434,23 @@ Tables~\ref{tab:ERTs}. The experiments were performed with COCO \cite{hansen2020
 \begin{figure}
 \begin{tabular}{@{}l@{}@{}l@{}}
 \multicolumn{1}{c}{5-D} & \multicolumn{1}{c}{20-D}\\
-%\rot{all functions}
-%\hspace*{-2mm}
-\rot[2.8]{separable fcts}
+\rot[2.5]{separable fcts}
 \hspace*{-1.4mm}
 \includegraphics[width=0.24\textwidth]{pplogloss_05D_separ} &
 \includegraphics[width=0.24\textwidth]{pplogloss_20D_separ}\\
-\rot[2.7]{moderate fcts}
+\rot[2.4]{moderate fcts}
 \hspace*{-1.4mm}
 \includegraphics[width=0.24\textwidth]{pplogloss_05D_lcond} &
 \includegraphics[width=0.24\textwidth]{pplogloss_20D_lcond}\\
-\rot[1.9]{ill-conditioned fcts}
+\rot[1.3]{ill-conditioned fcts}
 \hspace*{-1.35mm}
 \includegraphics[width=0.24\textwidth]{pplogloss_05D_hcond} &
 \includegraphics[width=0.24\textwidth]{pplogloss_20D_hcond}\\
-\rot[2.5]{multi-modal fcts}
+\rot[1.9]{multi-modal fcts}
 \hspace*{-1.3mm}
 \includegraphics[width=0.24\textwidth]{pplogloss_05D_multi} &
 \includegraphics[width=0.24\textwidth]{pplogloss_20D_multi}\\
-\rot[1.6]{weak structure fcts}
+\rot[1.2]{weak structure fcts}
 \hspace*{-1.4mm}
 \includegraphics[width=0.24\textwidth]{pplogloss_05D_mult2} &
 \includegraphics[width=0.24\textwidth]{pplogloss_20D_mult2}
